tests/paczka1/fuzzy1/52354203.err
Error in line 2: ABT A79 88,7
Error in line 12: 0COZ18Q6E4P A796 53,0
Error in line 14: 0COZ18Q6E4P A749 99,6
Error in line 20: ly8vd8NDrx A749 7,9
Error in line 23: ly8vd8NDrx S940 33,8
Error in line 29: 0COZ18Q6E4P A749 88,5
